# moon-clojure-toolchain

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
example/.moon/: toolchains.yml  workspace.yml
example/apps/cli/: deps.edn  moon.yml
example/apps/cli/src/cli/: main.clj
example/libs/greeter/: deps.edn  moon.yml
example/libs/greeter/src/greeter/: core.clj
example/libs/greeter/test/greeter/: core_test.clj
src/: closure.rs  config.rs  deps_edn.rs  lib.rs  sync.rs  tier1.rs  tier2.rs
tests/: closure_test.rs  deps_edn_test.rs  sync_test.rs  tier1_test.rs  tier2_test.rs
tests/__fixtures__/locate/scripts/: bb.edn
tests/__fixtures__/projects/apps/cli/: deps.edn  moon.yml
tests/__fixtures__/projects/apps/cli/src/cli/: main.clj
tests/__fixtures__/projects/libs/greeter/resources/: greeting.txt
tests/__fixtures__/projects/libs/greeter/src/greeter/: core.clj
tests/__fixtures__/projects/libs/testkit/src/testkit/: helpers.clj
